# async-es

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/async_es/: aggregate.py  application.py  event.py  protocols.py  sentinel.py  types.py
src/async_es/event_store/: inmemory.py  postgres.py
src/async_es/notifiers/: kafka.py
src/async_es/repository/: eventsourced.py
tests/: .env  test_aggregate.py  test_application.py  test_application_postgres.py  test_kafka_notifier.py
