[project]
name = "async-es"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "GenessyX", email = "haritonovgleb123@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["asyncpg>=0.29.0", "aiokafka>=0.11.0"]

[project.scripts]
async-es = "async_es:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
lint = ["pre-commit>=4.3.0", "ruff>=0.14.2"]
tests = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-sugar>=1.1.1",
  "testcontainers>=4.8.0",
]
types = ["mypy>=1.18.2"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "TD002", "TD003", "EXE", "ERA", "FIX", "INP001", "UP037"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "S105", "S311", "PLR2004", "FBT001"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*", "aiokafka", "aiokafka.*"]
ignore_missing_imports = true

[tool.pyright]
typeCheckingMode = "standard"
